src/ApiGateWays/OcelotApiGw/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-gateway-service
spec:
  selector:
    app: task-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
