src/ApiGateWays/OcelotApiGw/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-gateway-ingress
  labels:
    name: task-gateway-ingress
  rules:
    - host: tasklist.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: task-gateway-service
                port:
                  number: 80
